--- a/css/index.css
+++ b/css/index.css
@@ -780,3 +780,785 @@ a {
   text-decoration: none !important;
   transition: all 300ms ease-in-out;
 }
+body {
+  direction: rtl;
+  font-family: "Tajawal", sans-serif;
+  background-color: #777;
+  overflow-x: hidden;
+  width: 100%;
+}
+* {
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+section {
+  width: 100%;
+}
+html {
+  scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+  width: 0.8rem;
+}
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+  background: rgb(52, 52, 53);
+  border-radius: 5rem;
+}
+.containere {
+  width: 90%;
+  margin: 0 auto;
+}
+nav {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  height: auto;
+  width: 100vw;
+  transition: 0.3s;
+}
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+button {
+  display: none;
+}
+.menu-nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+}
+.menu-nav a {
+  font-size: 30px;
+  transition: 0.3s;
+  font-weight: 500;
+  text-decoration: none;
+  color: #fff;
+}
+
+nav .image {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50px;
+  margin-top: 10px;
+}
+.window-scroll {
+  background-color: rgba(0, 0, 0, 0.556);
+  box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%),
+    0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+@media (max-width: 1024px) {
+  nav button {
+    display: inline-block;
+    background: transparent;
+    font-size: 28px;
+    color: #fff;
+    cursor: pointer;
+
+    border: none;
+  }
+  nav button#close-btn {
+    display: none;
+  }
+  .menu-nav {
+    position: fixed;
+    top: 60px;
+    left: 5%;
+    height: fit-content;
+    width: 220px;
+    flex-direction: column;
+    gap: 0;
+    display: none;
+    transition: 0.3s;
+  }
+  .menu-nav li {
+    height: 65px;
+    width: 100%;
+    margin: 5px;
+    animation: navItem 400ms linear forwards;
+    opacity: 0;
+    transform-origin: top left;
+  }
+  .menu-nav li:nth-child(2) {
+    animation-delay: 200ms;
+  }
+  .menu-nav li:nth-child(3) {
+    animation-delay: 400ms;
+  }
+  .menu-nav li:nth-child(4) {
+    animation-delay: 600ms;
+  }
+  @keyframes navItem {
+    0% {
+      transform: rotateZ(-90deg);
+    }
+    100% {
+      transform: rotateZ(0);
+      opacity: 1;
+    }
+  }
+
+  .menu-nav li a {
+    background-color: #a7a3fd;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+  }
+  .menu-nav li a:hover {
+    color: #fff;
+    /* background-color: var(--color-bg2); */
+  }
+}
+.home {
+  background-image: url(../images/the-importance-of-servicing-your-air-conditioner-regularly-2.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  max-width: 100%;
+  height: 100vh;
+  object-fit: cover;
+  background-attachment: fixed;
+  position: relative;
+  background-position: center;
+}
+.home::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.768);
+}
+.home .info {
+  margin-top: 50px;
+  text-align: center;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  color: #fff;
+}
+.info h1 {
+  font-size: 55px;
+  margin-bottom: 20px;
+}
+.info p {
+  font-size: 22px;
+  line-height: 1.7;
+}
+@media (max-width: 991px) {
+  .info h1 {
+    font-size: 37px;
+    margin-top: 70px;
+    text-align: center;
+  }
+  .info p {
+    font-size: 17px;
+
+    text-align: center;
+  }
+  .info {
+    width: 100%;
+    text-align: center;
+  }
+}
+.info a {
+  padding: 15px 25px;
+  background-color: #999;
+  font-size: 25px;
+  border-radius: 15px;
+  text-decoration: none;
+  margin-top: 25px;
+  color: black;
+  font-weight: 500;
+  transition: 0.3s;
+  margin-top: 30px;
+  display: inline-block;
+}
+.second {
+  margin-top: 60px;
+}
+.second .text {
+  text-align: center;
+}
+.text h3 {
+  font-size: 45px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  color: #fff;
+}
+@media (max-width: 991px) {
+  .text h3 {
+    font-size: 32px;
+    margin-bottom: 15px;
+  }
+}
+/* h1 {
+  font-size: 2.5rem;
+  font-family: "Montserrat";
+  font-weight: normal;
+  color: #444;
+  text-align: center;
+  margin: 2rem 0;
+} */
+
+.wrapper {
+  width: 90%;
+  margin: 0 auto;
+  max-width: 80rem;
+}
+
+.cols {
+  /* display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* -ms-flex-wrap: wrap; */
+  flex-wrap: wrap;
+  /* -webkit-box-pack: center;
+  -ms-flex-pack: center; */
+  /* justify-content: center; */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 40px;
+  cursor: pointer;
+  place-content: center;
+  margin: 150px auto;
+}
+
+.col {
+  /* width: calc(30% - 2rem); */
+  margin: 1rem;
+  cursor: pointer;
+}
+
+.container {
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+
+.front,
+.back {
+  background-size: cover;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+  background-position: center;
+  -webkit-transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  -o-transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1),
+    -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  text-align: center;
+  min-height: 280px;
+  height: auto;
+  border-radius: 10px;
+  color: #fff;
+  font-size: 1.5rem;
+}
+
+.back {
+  background: #7dc2a2;
+  /* background: -webkit-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+  background: -o-linear-gradient(45deg,  #cedce7 0%,#596a72 100%);
+  background: linear-gradient(45deg,  #cedce7 0%,#596a72 100%); */
+}
+
+.front:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  content: "";
+  display: block;
+  opacity: 0.6;
+  background-color: #000;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  border-radius: 10px;
+}
+.container:hover .front,
+.container:hover .back {
+  -webkit-transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  -o-transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+  transition: transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1),
+    -webkit-transform 0.7s cubic-bezier(0.4, 0.2, 0.2, 1);
+}
+
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.inner {
+  -webkit-transform: translateY(-50%) translateZ(60px) scale(0.94);
+  transform: translateY(-50%) translateZ(60px) scale(0.94);
+  top: 50%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 2rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  outline: 1px solid transparent;
+  -webkit-perspective: inherit;
+  perspective: inherit;
+  z-index: 2;
+}
+
+.container .back {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.container .front {
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.container:hover .back {
+  -webkit-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.container:hover .front {
+  -webkit-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+}
+
+.front .inner p {
+  font-size: 2rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+
+.front .inner p:after {
+  content: "";
+  width: 4rem;
+  height: 2px;
+  position: absolute;
+  background: #c6d4df;
+  display: block;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  bottom: -0.75rem;
+}
+
+.front .inner span {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Montserrat";
+  font-weight: 300;
+}
+
+/* @media screen and (max-width: 64rem) {
+  .col {
+    width: calc(33.333333% - 2rem);
+  }
+}
+
+@media screen and (max-width: 48rem) {
+  .col {
+    width: calc(50% - 2rem);
+  }
+} */
+/* 
+@media screen and (max-width: 32rem) {
+  .col {
+    width: 100%;
+    margin: 0 0 2rem 0;
+  }
+} */
+.containers {
+  width: 550px;
+  height: 100%;
+  margin-left: 10px;
+}
+
+/* .third {
+  padding: 60px;
+} */
+.about-section {
+  background: url(../images/feature.jpg) no-repeat left;
+  background-size: 55%;
+  background-color: #fdfdfd;
+  overflow: hidden;
+  padding: 100px 0;
+  border-radius: 25px;
+  -webkit-box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+  -moz-box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+  box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+}
+
+.inner-container {
+  width: 55%;
+  float: right;
+  background-color: #ececee;
+  padding: 70px;
+  -webkit-box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+  -moz-box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+  box-shadow: -15px -1px 47px -1px rgba(136, 136, 191, 1);
+  border-radius: 25px;
+}
+
+.inner-container h1 {
+  margin-bottom: 30px;
+  font-size: 50px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.text {
+  font-size: 22px;
+  color: #545454;
+  line-height: 1.7;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+
+.skills {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  font-size: 18px;
+}
+.skills span {
+  padding: 10px 16px;
+  background-color: #dde6ec96;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  .inner-container {
+    padding: 80px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .about-section {
+    background-size: 100%;
+    padding: 100px 40px;
+  }
+  .inner-container {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-section {
+    padding: 0;
+    /* background-size: 100%;
+    width: 100%; */
+    /* overflow-x: hidden; */
+  }
+  .inner-container {
+    padding: 60px;
+    width: 100%;
+  }
+}
+.four {
+  margin-top: 70px;
+}
+.cont {
+  background-attachment: fixed;
+  background-image: url(../images/the-importance-of-servicing-your-air-conditioner-regularly-2.jpeg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  padding: 30px;
+}
+.cont::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 61, 75, 0.562);
+}
+.boxs {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  gap: 40px;
+  cursor: pointer;
+  place-content: center;
+  margin: 150px auto;
+}
+.boxs .box {
+  padding: 15px;
+  border: 2px solid rgba(4, 197, 223, 0.945);
+  text-align: center;
+  color: #fff;
+  z-index: 1;
+}
+.box p {
+  padding: 15px;
+}
+.site-footer {
+  background-color: #26272b;
+  padding: 45px 0 20px;
+  font-size: 15px;
+  line-height: 24px;
+  color: #737373;
+}
+.site-footer hr {
+  border-top-color: #bbb;
+  opacity: 0.5;
+}
+.site-footer hr.small {
+  margin: 20px 0;
+}
+.site-footer h6 {
+  color: #fff;
+  font-size: 16px;
+  text-transform: uppercase;
+  margin-top: 5px;
+  letter-spacing: 2px;
+}
+.site-footer a {
+  color: #fffdfd;
+}
+.site-footer a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links {
+  padding-left: 0;
+  list-style: none;
+}
+.footer-links li {
+  display: block;
+  color: #fff !important;
+}
+.footer-links a {
+  color: #737373;
+}
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+  color: #3366cc;
+  text-decoration: none;
+}
+.footer-links.inline li {
+  display: inline-block;
+}
+/* .site-footer .social-icons {
+  text-align: right;
+} */
+.site-footer .social-icons a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin-left: 6px;
+  margin-right: 0;
+  border-radius: 100%;
+  background-color: #081f7c;
+}
+.copyright-text {
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .site-footer [class^="col-"] {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 767px) {
+  .site-footer {
+    padding-bottom: 0;
+  }
+  .site-footer .copyright-text,
+  .site-footer .social-icons {
+    text-align: center;
+  }
+}
+.row {
+  margin-left: 0 !important;
+}
+/* .social-icons {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+.social-icons li {
+  display: inline-block;
+  margin-bottom: 4px;
+}
+.social-icons li.title {
+  margin-right: 15px;
+  text-transform: uppercase;
+  color: #96a2b2;
+  font-weight: 700;
+  font-size: 13px;
+}
+.social-icons a {
+  background-color: #eceeef;
+  color: #818a91;
+  font-size: 16px;
+  display: inline-block;
+  line-height: 44px;
+  width: 44px;
+  height: 44px;
+  text-align: center;
+  margin-right: 8px;
+  border-radius: 100%;
+  -webkit-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+  color: #fff;
+  background-color: #29aafe;
+}
+.social-icons.size-sm a {
+  line-height: 34px;
+  height: 34px;
+  width: 34px;
+  font-size: 14px;
+}
+.social-icons a.facebook:hover {
+  background-color: #3b5998;
+}
+.social-icons a.twitter:hover {
+  background-color: #00aced;
+}
+.social-icons a.linkedin:hover {
+  background-color: #007bb6;
+}
+.social-icons a.dribbble:hover {
+  background-color: #ea4c89;
+} */
+@media (max-width: 767px) {
+  .social-icons li.title {
+    display: block;
+    margin-right: 0;
+    font-weight: 600;
+  }
+}
+a {
+  text-decoration: none;
+}
+.floating_btn {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
+  }
+}
+
+.contact_icon {
+  background-color: #42db87;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  font-size: 30px;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translatey(0px);
+  animation: pulse 1.5s infinite;
+  box-shadow: 0 0 0 0 #42db87;
+  -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  font-weight: normal;
+  font-family: sans-serif;
+  text-decoration: none !important;
+  transition: all 300ms ease-in-out;
+}
+
+.text_icon {
+  margin-top: 8px;
+  color: #080808;
+  font-size: 13px;
+}
+.float {
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+@keyframes pulsing {
+  to {
+    box-shadow: 0 0 0 30px rgba(232, 76, 61, 0);
+  }
+}
+
+.contact-1 {
+  background-color: #e6e6e6;
+  color: rgb(5, 4, 4);
+  width: 60px;
+  height: 60px;
+  font-size: 30px;
+  border-radius: 50px;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translatey(0px);
+  animation: pulse 1.5s infinite;
+  box-shadow: 0 0 0 0 #42db87;
+  -webkit-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -moz-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  -ms-animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  animation: pulsing 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+  font-weight: normal;
+  font-family: sans-serif;
+  text-decoration: none !important;
+  transition: all 300ms ease-in-out;
+}
