--- a/css/serv.css
+++ b/css/serv.css
@@ -171,3 +171,177 @@ img {
   color: #fff;
   list-style: circle !important;
 }
+.serv {
+  background-image: radial-gradient(
+      circle at center center,
+      rgba(33, 33, 33, 0),
+      rgb(33, 33, 33)
+    ),
+    repeating-linear-gradient(
+      135deg,
+      rgb(33, 33, 33) 0px,
+      rgb(33, 33, 33) 1px,
+      transparent 1px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      45deg,
+      rgb(56, 56, 56) 0px,
+      rgb(56, 56, 56) 5px,
+      transparent 5px,
+      transparent 6px
+    ),
+    linear-gradient(90deg, rgb(33, 33, 33), rgb(33, 33, 33));
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100vh;
+}
+.our-serv {
+  background-color: #d2dbdd;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+.our-serv h1 {
+  text-align: center;
+  -webkit-text-stroke: 1px rgb(255, 248, 248);
+  color: transparent;
+  background-image: linear-gradient(#faf5f5, rgb(18, 67, 228));
+  background-repeat: no-repeat;
+  font-size: 130px;
+  -webkit-background-clip: text;
+  background-position: -1550px 0;
+  animation: animate 2s linear infinite alternate;
+  margin-bottom: 40px;
+}
+@keyframes animate {
+  100% {
+    background-position: 0 0;
+  }
+}
+
+img {
+  max-width: 100%;
+  vertical-align: middle;
+  height: auto;
+  object-fit: cover;
+}
+
+.btn {
+  background-color: white;
+  border: 1px solid #333;
+  border-radius: 1rem;
+  color: #333;
+  padding: 0.5rem;
+  text-transform: lowercase;
+}
+
+.btn-block {
+  display: inline-block;
+  /* width: 100%; */
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.cards-item {
+  display: flex;
+  padding: 1rem;
+}
+@media (min-width: 650px) {
+  .cards-item {
+    width: 50%;
+  }
+}
+@media (min-width: 900px) {
+  .cards-item {
+    width: 29%;
+  }
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  border-radius: 20px;
+  transition: 0.3s;
+}
+.card:hover {
+  transform: scale(0.9);
+}
+
+.card:hover img {
+  filter: grayscale(2);
+}
+.card-content {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
+  padding: 1rem;
+  text-align: right;
+}
+
+/* .card-image {
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+  filter: contrast(70%);
+  filter: saturate(180%);
+  overflow: hidden;
+  position: relative;
+  transition: filter 0.5s cubic-bezier(0.43, 0.41, 0.22, 0.91);
+} */
+
+.card-title {
+  color: #333;
+  font-size: 34px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.card-text {
+  flex: 1 1 auto;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  margin-bottom: 1.25rem;
+  color: #666;
+}
+
+.place {
+  padding: 30px;
+  background-color: rgba(0, 0, 0, 0.747);
+}
+.place h2 {
+  font-size: 45px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  color: #fff;
+}
+.dubai {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+  justify-content: center;
+}
+.dubai li {
+  font-size: 18px;
+  color: #fff;
+  list-style: circle !important;
+}
